Added more reporting to the backend.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
             <div class="topcoat-checkbox__checkmark"></div>
             Creative Director
         </label>
+        <label for="role_video_professional" class="topcoat-checkbox person-type">
+            <input type="checkbox" name="role_video_professional" id="role_video_professional"  />
+            <div class="topcoat-checkbox__checkmark"></div>
+            Video Professional
+        </label>
         <label for="role_it_team" class="topcoat-checkbox person-type">
             <input type="checkbox" name="role_it_team" id="it_team"  />
             <div class="topcoat-checkbox__checkmark"></div>
